# ai-news-bot

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: digest.yml  run.yml
ai_news_bot/: .env.example  main.py  pyproject.toml
ai_news_bot/config/: settings.yaml  sources.yaml
ai_news_bot/core/: dedup.py  digest.py  models.py  runner.py  summarizer.py
ai_news_bot/core/fetcher/: base.py  factory.py  github_fetcher.py  hf_fetcher.py  html_fetcher.py  rss_fetcher.py
ai_news_bot/core/notifier/: feishu.py  telegram.py
ai_news_bot/storage/: seen.db
ai_news_bot/tests/: test_dedup.py  test_feishu.py  test_rss.py  test_telegram.py
deploy/: ai-news-bot.service  ai-news-bot.timer  install_vps.sh
